# unarchiver

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
tests/: test_unarchiver.py
tests/resources/: simple_custom_type.plist
unarchiver/: unarchiver.py
